# HIRO_Panda_TRAC_IK

./: CMakeLists.txt  README.md  package.xml  panda_ik_controllers_plugin.xml
config/: panda_pose_controllers.yaml
include/panda_interface/: panda_pose_controller.h
include/panda_utils/: panda_trac_ik.h
launch/: hiro_panda_ik_controller.launch
src/: splines.ipynb
src/panda_interface/: panda_pose_controller.cpp
src/panda_utils/: panda_trac_ik.cpp
